--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+poetry.lock
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
