--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 poetry.lock
+.idea/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
